# NeoDeskPet

./: .eslintignore  .gitignore  LICENSE  README.md  calc_num.py  electron-builder.config.cjs  electron-builder.json5  index.html  package-lock.json  package.json  solve.py  tsconfig.json  verification.md  vite.config.ts  一键启动.bat  对话.txt  提示词.txt  文生图手机版.js  记忆系统plan.md  问题.txt
ComfyUI-AnimaTool-main/: .gitignore  CHANGELOG.md  CURSOR_SKILL.md  LICENSE  MCP_SETUP.md  README.md  __init__.py  pyproject.toml  requirements.txt
ComfyUI-AnimaTool-main/examples/loras/_Anima/: cosmic_kaguya_lokr_epoch4_comfyui.safetensors.json
ComfyUI-AnimaTool-main/examples/requests/: generate_with_cosmic_kaguya_lora.json
ComfyUI-AnimaTool-main/executor/: __init__.py  anima_executor.py  config.py  workflow_template.json
ComfyUI-AnimaTool-main/knowledge/: anima_expert.md  artist_list.md  prompt_examples.md
ComfyUI-AnimaTool-main/schemas/: tool_schema_universal.json
ComfyUI-AnimaTool-main/servers/: __init__.py  cli.py  http_server.py  mcp_server.py
ComfyUI-AnimaTool-main/wiki/: API-Reference.md  FAQ.md  Home.md  Installation.md  MCP-Setup.md  Prompt-Guide.md
Fun-ASR/: realtime_server.py  realtime_web.html  requirements.txt  start_realtime.bat
Operit-main1.7.0/: .gitignore  gradle.properties
Prisma-main/: README.md  package-lock.json
SenseVoice-ASR/: sensevoice_server.py  sensevoice_web.html  start_sensevoice_demo.bat
VCPToolBox-main/: .gitignore  Dockerfile  EPAModule.js  EmbeddingUtils.js  FileFetcherServer.js  KnowledgeBaseManager.js  Plugin.js  README.md  README_en.md  (+13 more)
(+462 files in other folders)
