[project]
name = "comfyui-animatool"
version = "1.0.0"
description = "AI Tool Use API for Anima anime/illustration image generation. Supports MCP Server (native image display in Cursor/Claude), HTTP API, and CLI."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["comfyui", "anima", "anime", "illustration", "mcp", "tool-use", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp",
    "requests",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/Moeblack/ComfyUI-AnimaTool"
Repository = "https://github.com/Moeblack/ComfyUI-AnimaTool"
Documentation = "https://github.com/Moeblack/ComfyUI-AnimaTool/wiki"
Issues = "https://github.com/Moeblack/ComfyUI-AnimaTool/issues"

[tool.comfy]
PublisherId = "YOUR_PUBLISHER_ID"
DisplayName = "Anima Tool"
Icon = "assets/screenshot.webp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
